Added new 'Find my friend' activity. Working on linking it to button click

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Find_My_Friend"
+            android:label="@string/title_activity_find__my__friend" >
+        </activity>
     </application>
 
 </manifest>
